# NSO-Calendar-Scraper

./: .gitignore  .pre-commit-config.yaml  README.md  pull.py  pyproject.toml  scraper.ipynb  scraper.py
.github/workflows/: poetry.yaml
output_calendars/: events.ics  exchange_igsp_events.ics  general_calendar.ics  transfer_events.ics
