[tool.poetry]
name = "nso-calendar-scraper"
version = "0.1.0"
description = ""
authors = ["Artemis Livingstone <ar.d.livingstone@gmail.com>"]
readme = "README.md"
packages = [{ include = "nso_calendar_scraper" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
jupyter = "^1.0.0"
beautifulsoup4 = "^4.12.2"
selenium = "^4.11.2"
ics = "^0.7.2"
tzdata = "^2023.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"
black = "^23.7.0"
pre-commit = "^3.3.3"
jupytext = "^1.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.jupytext]
formats = "ipynb,py:percent"
